--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Akira Ueda <ue@gol.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+actix-web = "=4.0.0-beta.5"
+actix-http = "=3.0.0-beta.5"
+actix-service = "=2.0.0-beta.5"
