--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,19 @@ version = "0.1.0"
 authors = ["Akira Ueda <ue@gol.com>"]
 edition = "2018"
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
+
 [dependencies]
 actix-web = "4.0.0-beta.6"
 actix-http = "3.0.0-beta.6"
 actix-service = "2.0.0"
+
+[dev-dependencies]
+actix-rt = "2.2.0"
+reqwest = "0.11.3"
+tokio = "1.6.0"
