--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ name = "zero2prod"
 actix-web = "4.0.0-beta.6"
 actix-http = "3.0.0-beta.6"
 actix-service = "2.0.0"
+serde = { version = "1", features = ["derive"]}
 
 [dev-dependencies]
 actix-rt = "2.2.0"
