--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,23 @@ name = "zero2prod"
 actix-web = "4.0.0-beta.6"
 actix-http = "3.0.0-beta.6"
 actix-service = "2.0.0"
-serde = { version = "1", features = ["derive"]}
+serde = { version = "1", features = ["derive"] }
+config = "0.11.0"
+
+[dependencies.sqlx]
+version = "0.5.5"
+default-features = false
+features = [
+    "runtime-actix-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
 
 [dev-dependencies]
 actix-rt = "2.2.0"
 reqwest = "0.11.3"
 tokio = "1.6.0"
+
