--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "zero2prod"
 version = "0.1.0"
-authors = ["Akira Ueda <ue@gol.com>"]
+authors = ["LukeMathWalker <rust@lpalmieri.com>"]
 edition = "2018"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 path = "src/lib.rs"
 
@@ -12,26 +13,14 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
-actix-web = "4.0.0-beta.6"
-actix-http = "3.0.0-beta.6"
-actix-service = "2.0.0"
-serde = { version = "1", features = ["derive"] }
-config = "0.11.0"
-
-[dependencies.sqlx]
-version = "0.5.5"
-default-features = false
-features = [
-    "runtime-actix-rustls",
-    "macros",
-    "postgres",
-    "uuid",
-    "chrono",
-    "migrate"
-]
+actix-web = "4.0.0-beta.3"
+serde = "1.0.115"
+config = { version = "0.10.1", default-features = false, features = ["yaml"] }
+sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
+uuid = { version = "0.8.1", features = ["v4"] }
+chrono = "0.4.15"
 
 [dev-dependencies]
-actix-rt = "2.2.0"
-reqwest = "0.11.3"
-tokio = "1.6.0"
-
+actix-rt = "2"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = "1"
